@@ -17,7 +17,6 @@ import com.google.common.collect.Lists;
 import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.sosy_lab.common.rationals.Rational;
 import org.sosy_lab.java_smt.api.BooleanFormula;
 import org.sosy_lab.java_smt.api.Formula;
@@ -198,12 +197,7 @@ public abstract class AbstractNumeralFormulaManager<
 
   @Override
   public ResultFormulaType sum(List<ParamFormulaType> operands) {
-    return wrap(
-        sumImpl(
-            operands.stream()
-                .map(this::extractInfo)
-                .map(this::toType)
-                .collect(Collectors.toList())));
+    return wrap(sumImpl(operands.stream().map(this::extractInfo).map(this::toType).toList()));
   }
 
   protected TFormulaInfo sumImpl(List<TFormulaInfo> operands) {
