@@ -2,13 +2,14 @@
 // an API wrapper for a collection of SMT solvers:
 // https://github.com/sosy-lab/java-smt
 //
-// SPDX-FileCopyrightText: 2022 Dirk Beyer <https://www.sosy-lab.org>
+// SPDX-FileCopyrightText: 2026 Dirk Beyer <https://www.sosy-lab.org>
 //
 // SPDX-License-Identifier: Apache-2.0
 
 package org.sosy_lab.java_smt.basicimpl;
 
-import com.google.auto.value.AutoValue;
+import static com.google.common.base.Preconditions.checkNotNull;
+
 import com.google.common.collect.ImmutableList;
 import com.google.errorprone.annotations.Immutable;
 import java.util.List;
@@ -19,18 +20,32 @@ import org.sosy_lab.java_smt.api.FunctionDeclarationKind;
 
 /** Declaration of a function. */
 @Immutable(containerOf = "T")
-@AutoValue
-public abstract class FunctionDeclarationImpl<F extends Formula, T>
+public record FunctionDeclarationImpl<F extends Formula, T>(
+    FunctionDeclarationKind getKind,
+    String getName,
+    ImmutableList<Integer> getIndices,
+    FormulaType<F> getType,
+    ImmutableList<FormulaType<?>> getArgumentTypes,
+    T getSolverDeclaration)
     implements FunctionDeclaration<F> {
 
-  public static <F extends Formula, T> FunctionDeclaration<F> of(
+  public FunctionDeclarationImpl {
+    checkNotNull(getKind);
+    checkNotNull(getName);
+    checkNotNull(getIndices);
+    checkNotNull(getType);
+    checkNotNull(getArgumentTypes);
+    checkNotNull(getSolverDeclaration);
+  }
+
+  public static <F extends Formula, T> FunctionDeclarationImpl<F, T> of(
       String name,
       FunctionDeclarationKind kind,
       List<Integer> pIndices,
       List<FormulaType<?>> pArgumentTypes,
       FormulaType<F> pReturnType,
       T pDeclaration) {
-    return new AutoValue_FunctionDeclarationImpl<>(
+    return new FunctionDeclarationImpl<>(
         kind,
         name,
         ImmutableList.copyOf(pIndices),
@@ -48,14 +63,8 @@ public abstract class FunctionDeclarationImpl<F extends Formula, T>
     return of(name, kind, ImmutableList.of(), pArgumentTypes, pReturnType, pDeclaration);
   }
 
-  /**
-   * get a reference to the internal declaration used by the SMT solver. This method should only be
-   * used internally in JavaSMT.
-   */
-  public abstract T getSolverDeclaration();
-
   @Override
-  public final String toString() {
-    return String.format("%s (%s)", getKind(), getName());
+  public String toString() {
+    return "%s (%s)".formatted(getKind(), getName());
   }
 }
