@@ -266,8 +266,7 @@ class Mathsat5FormulaCreator extends FormulaCreator<Long, Long, Long, Long> {
     assert pType.equals(getFormulaType(pTerm))
             || (pType.equals(FormulaType.RationalType)
                 && getFormulaType(pTerm).equals(FormulaType.IntegerType))
-        : String.format(
-            "Trying to encapsulate formula of type %s as %s", getFormulaType(pTerm), pType);
+        : "Trying to encapsulate formula of type %s as %s".formatted(getFormulaType(pTerm), pType);
     if (pType.isBooleanType()) {
       return (T) new Mathsat5BooleanFormula(pTerm);
     } else if (pType.isIntegerType()) {
@@ -422,7 +421,7 @@ class Mathsat5FormulaCreator extends FormulaCreator<Long, Long, Long, Long> {
       return FloatingPointRoundingMode.TOWARD_ZERO;
     } else {
       throw new IllegalArgumentException(
-          String.format("Unknown rounding mode in Term '%s'.", msat_term_repr(f)));
+          "Unknown rounding mode in Term '%s'.".formatted(msat_term_repr(f)));
     }
   }
 
@@ -442,148 +441,76 @@ class Mathsat5FormulaCreator extends FormulaCreator<Long, Long, Long, Long> {
 
     long decl = msat_term_get_decl(pF);
     int tag = msat_decl_get_tag(environment, decl);
-    switch (tag) {
-      case MSAT_TAG_AND:
-        return FunctionDeclarationKind.AND;
-      case MSAT_TAG_NOT:
-        return FunctionDeclarationKind.NOT;
-      case MSAT_TAG_OR:
-        return FunctionDeclarationKind.OR;
-      case MSAT_TAG_IFF:
-        return FunctionDeclarationKind.IFF;
-      case MSAT_TAG_ITE:
-        return FunctionDeclarationKind.ITE;
-
-      case MSAT_TAG_TIMES:
-        return FunctionDeclarationKind.MUL;
-      case MSAT_TAG_DIVIDE:
-        return FunctionDeclarationKind.DIV;
-      case MSAT_TAG_PLUS:
-        return FunctionDeclarationKind.ADD;
-      case MSAT_TAG_LEQ:
-        return FunctionDeclarationKind.LTE;
-      case MSAT_TAG_EQ:
-        return FunctionDeclarationKind.EQ;
-      case MSAT_TAG_INT_TO_BV:
-        return FunctionDeclarationKind.INT_TO_BV;
-      case MSAT_TAG_ARRAY_READ:
-        return FunctionDeclarationKind.SELECT;
-      case MSAT_TAG_ARRAY_WRITE:
-        return FunctionDeclarationKind.STORE;
-      case MSAT_TAG_ARRAY_CONST:
-        return FunctionDeclarationKind.CONST;
-
-      case MSAT_TAG_BV_EXTRACT:
-        return FunctionDeclarationKind.BV_EXTRACT;
-      case MSAT_TAG_BV_CONCAT:
-        return FunctionDeclarationKind.BV_CONCAT;
-      case MSAT_TAG_BV_NOT:
-        return FunctionDeclarationKind.BV_NOT;
-      case MSAT_TAG_BV_NEG:
-        return FunctionDeclarationKind.BV_NEG;
-      case MSAT_TAG_BV_AND:
-        return FunctionDeclarationKind.BV_AND;
-      case MSAT_TAG_BV_OR:
-        return FunctionDeclarationKind.BV_OR;
-      case MSAT_TAG_BV_XOR:
-        return FunctionDeclarationKind.BV_XOR;
-      case MSAT_TAG_BV_ULT:
-        return FunctionDeclarationKind.BV_ULT;
-      case MSAT_TAG_BV_SLT:
-        return FunctionDeclarationKind.BV_SLT;
-      case MSAT_TAG_BV_ULE:
-        return FunctionDeclarationKind.BV_ULE;
-      case MSAT_TAG_BV_SLE:
-        return FunctionDeclarationKind.BV_SLE;
-      case MSAT_TAG_BV_ADD:
-        return FunctionDeclarationKind.BV_ADD;
-      case MSAT_TAG_BV_SUB:
-        return FunctionDeclarationKind.BV_SUB;
-      case MSAT_TAG_BV_MUL:
-        return FunctionDeclarationKind.BV_MUL;
-      case MSAT_TAG_BV_UDIV:
-        return FunctionDeclarationKind.BV_UDIV;
-      case MSAT_TAG_BV_SDIV:
-        return FunctionDeclarationKind.BV_SDIV;
-      case MSAT_TAG_BV_UREM:
-        return FunctionDeclarationKind.BV_UREM;
-      case MSAT_TAG_BV_SREM:
-        return FunctionDeclarationKind.BV_SREM;
-      case MSAT_TAG_BV_LSHL:
-        return FunctionDeclarationKind.BV_SHL;
-      case MSAT_TAG_BV_LSHR:
-        return FunctionDeclarationKind.BV_LSHR;
-      case MSAT_TAG_BV_ASHR:
-        return FunctionDeclarationKind.BV_ASHR;
-      case MSAT_TAG_BV_SEXT:
-        return FunctionDeclarationKind.BV_SIGN_EXTENSION;
-      case MSAT_TAG_BV_ZEXT:
-        return FunctionDeclarationKind.BV_ZERO_EXTENSION;
-      case MSAT_TAG_BV_ROL:
-        return FunctionDeclarationKind.BV_ROTATE_LEFT_BY_INT;
-      case MSAT_TAG_BV_ROR:
-        return FunctionDeclarationKind.BV_ROTATE_RIGHT_BY_INT;
-      case MSAT_TAG_INT_FROM_UBV:
-        return FunctionDeclarationKind.UBV_TO_INT;
-      case MSAT_TAG_INT_FROM_SBV:
-        return FunctionDeclarationKind.SBV_TO_INT;
-
-      case MSAT_TAG_FP_NEG:
-        return FunctionDeclarationKind.FP_NEG;
-      case MSAT_TAG_FP_ABS:
-        return FunctionDeclarationKind.FP_ABS;
-      case MSAT_TAG_FP_MAX:
-        return FunctionDeclarationKind.FP_MAX;
-      case MSAT_TAG_FP_MIN:
-        return FunctionDeclarationKind.FP_MIN;
-      case MSAT_TAG_FP_SQRT:
-        return FunctionDeclarationKind.FP_SQRT;
-      case MSAT_TAG_FP_ADD:
-        return FunctionDeclarationKind.FP_ADD;
-      case MSAT_TAG_FP_SUB:
-        return FunctionDeclarationKind.FP_SUB;
-      case MSAT_TAG_FP_DIV:
-        return FunctionDeclarationKind.FP_DIV;
-      case MSAT_TAG_FP_MUL:
-        return FunctionDeclarationKind.FP_MUL;
-      case MSAT_TAG_FP_LT:
-        return FunctionDeclarationKind.FP_LT;
-      case MSAT_TAG_FP_LE:
-        return FunctionDeclarationKind.FP_LE;
-      case MSAT_TAG_FP_EQ:
-        return FunctionDeclarationKind.FP_EQ;
-      case MSAT_TAG_FP_ROUND_TO_INT:
-        return FunctionDeclarationKind.FP_ROUND_TO_INTEGRAL;
-      case MSAT_TAG_FP_FROM_SBV:
-        return FunctionDeclarationKind.BV_SCASTTO_FP;
-      case MSAT_TAG_FP_FROM_UBV:
-        return FunctionDeclarationKind.BV_UCASTTO_FP;
-      case MSAT_TAG_FP_TO_SBV:
-        return FunctionDeclarationKind.FP_CASTTO_SBV;
-      case MSAT_TAG_FP_TO_UBV:
-        return FunctionDeclarationKind.FP_CASTTO_UBV;
-      case MSAT_TAG_FP_AS_IEEEBV:
-        return FunctionDeclarationKind.FP_AS_IEEEBV;
-      case MSAT_TAG_FP_CAST:
-        return FunctionDeclarationKind.FP_CASTTO_FP;
-      case MSAT_TAG_FP_ISNAN:
-        return FunctionDeclarationKind.FP_IS_NAN;
-      case MSAT_TAG_FP_ISINF:
-        return FunctionDeclarationKind.FP_IS_INF;
-      case MSAT_TAG_FP_ISZERO:
-        return FunctionDeclarationKind.FP_IS_ZERO;
-      case MSAT_TAG_FP_ISNEG:
-        return FunctionDeclarationKind.FP_IS_NEGATIVE;
-      case MSAT_TAG_FP_ISSUBNORMAL:
-        return FunctionDeclarationKind.FP_IS_SUBNORMAL;
-      case MSAT_TAG_FP_ISNORMAL:
-        return FunctionDeclarationKind.FP_IS_NORMAL;
-      case MSAT_TAG_FLOOR:
-        return FunctionDeclarationKind.FLOOR;
-
-      default:
-        return FunctionDeclarationKind.OTHER;
-    }
+    return switch (tag) {
+      case MSAT_TAG_AND -> FunctionDeclarationKind.AND;
+      case MSAT_TAG_NOT -> FunctionDeclarationKind.NOT;
+      case MSAT_TAG_OR -> FunctionDeclarationKind.OR;
+      case MSAT_TAG_IFF -> FunctionDeclarationKind.IFF;
+      case MSAT_TAG_ITE -> FunctionDeclarationKind.ITE;
+      case MSAT_TAG_TIMES -> FunctionDeclarationKind.MUL;
+      case MSAT_TAG_DIVIDE -> FunctionDeclarationKind.DIV;
+      case MSAT_TAG_PLUS -> FunctionDeclarationKind.ADD;
+      case MSAT_TAG_LEQ -> FunctionDeclarationKind.LTE;
+      case MSAT_TAG_EQ -> FunctionDeclarationKind.EQ;
+      case MSAT_TAG_INT_TO_BV -> FunctionDeclarationKind.INT_TO_BV;
+      case MSAT_TAG_ARRAY_READ -> FunctionDeclarationKind.SELECT;
+      case MSAT_TAG_ARRAY_WRITE -> FunctionDeclarationKind.STORE;
+      case MSAT_TAG_ARRAY_CONST -> FunctionDeclarationKind.CONST;
+      case MSAT_TAG_BV_EXTRACT -> FunctionDeclarationKind.BV_EXTRACT;
+      case MSAT_TAG_BV_CONCAT -> FunctionDeclarationKind.BV_CONCAT;
+      case MSAT_TAG_BV_NOT -> FunctionDeclarationKind.BV_NOT;
+      case MSAT_TAG_BV_NEG -> FunctionDeclarationKind.BV_NEG;
+      case MSAT_TAG_BV_AND -> FunctionDeclarationKind.BV_AND;
+      case MSAT_TAG_BV_OR -> FunctionDeclarationKind.BV_OR;
+      case MSAT_TAG_BV_XOR -> FunctionDeclarationKind.BV_XOR;
+      case MSAT_TAG_BV_ULT -> FunctionDeclarationKind.BV_ULT;
+      case MSAT_TAG_BV_SLT -> FunctionDeclarationKind.BV_SLT;
+      case MSAT_TAG_BV_ULE -> FunctionDeclarationKind.BV_ULE;
+      case MSAT_TAG_BV_SLE -> FunctionDeclarationKind.BV_SLE;
+      case MSAT_TAG_BV_ADD -> FunctionDeclarationKind.BV_ADD;
+      case MSAT_TAG_BV_SUB -> FunctionDeclarationKind.BV_SUB;
+      case MSAT_TAG_BV_MUL -> FunctionDeclarationKind.BV_MUL;
+      case MSAT_TAG_BV_UDIV -> FunctionDeclarationKind.BV_UDIV;
+      case MSAT_TAG_BV_SDIV -> FunctionDeclarationKind.BV_SDIV;
+      case MSAT_TAG_BV_UREM -> FunctionDeclarationKind.BV_UREM;
+      case MSAT_TAG_BV_SREM -> FunctionDeclarationKind.BV_SREM;
+      case MSAT_TAG_BV_LSHL -> FunctionDeclarationKind.BV_SHL;
+      case MSAT_TAG_BV_LSHR -> FunctionDeclarationKind.BV_LSHR;
+      case MSAT_TAG_BV_ASHR -> FunctionDeclarationKind.BV_ASHR;
+      case MSAT_TAG_BV_SEXT -> FunctionDeclarationKind.BV_SIGN_EXTENSION;
+      case MSAT_TAG_BV_ZEXT -> FunctionDeclarationKind.BV_ZERO_EXTENSION;
+      case MSAT_TAG_BV_ROL -> FunctionDeclarationKind.BV_ROTATE_LEFT_BY_INT;
+      case MSAT_TAG_BV_ROR -> FunctionDeclarationKind.BV_ROTATE_RIGHT_BY_INT;
+      case MSAT_TAG_INT_FROM_UBV -> FunctionDeclarationKind.UBV_TO_INT;
+      case MSAT_TAG_INT_FROM_SBV -> FunctionDeclarationKind.SBV_TO_INT;
+      case MSAT_TAG_FP_NEG -> FunctionDeclarationKind.FP_NEG;
+      case MSAT_TAG_FP_ABS -> FunctionDeclarationKind.FP_ABS;
+      case MSAT_TAG_FP_MAX -> FunctionDeclarationKind.FP_MAX;
+      case MSAT_TAG_FP_MIN -> FunctionDeclarationKind.FP_MIN;
+      case MSAT_TAG_FP_SQRT -> FunctionDeclarationKind.FP_SQRT;
+      case MSAT_TAG_FP_ADD -> FunctionDeclarationKind.FP_ADD;
+      case MSAT_TAG_FP_SUB -> FunctionDeclarationKind.FP_SUB;
+      case MSAT_TAG_FP_DIV -> FunctionDeclarationKind.FP_DIV;
+      case MSAT_TAG_FP_MUL -> FunctionDeclarationKind.FP_MUL;
+      case MSAT_TAG_FP_LT -> FunctionDeclarationKind.FP_LT;
+      case MSAT_TAG_FP_LE -> FunctionDeclarationKind.FP_LE;
+      case MSAT_TAG_FP_EQ -> FunctionDeclarationKind.FP_EQ;
+      case MSAT_TAG_FP_ROUND_TO_INT -> FunctionDeclarationKind.FP_ROUND_TO_INTEGRAL;
+      case MSAT_TAG_FP_FROM_SBV -> FunctionDeclarationKind.BV_SCASTTO_FP;
+      case MSAT_TAG_FP_FROM_UBV -> FunctionDeclarationKind.BV_UCASTTO_FP;
+      case MSAT_TAG_FP_TO_SBV -> FunctionDeclarationKind.FP_CASTTO_SBV;
+      case MSAT_TAG_FP_TO_UBV -> FunctionDeclarationKind.FP_CASTTO_UBV;
+      case MSAT_TAG_FP_AS_IEEEBV -> FunctionDeclarationKind.FP_AS_IEEEBV;
+      case MSAT_TAG_FP_CAST -> FunctionDeclarationKind.FP_CASTTO_FP;
+      case MSAT_TAG_FP_ISNAN -> FunctionDeclarationKind.FP_IS_NAN;
+      case MSAT_TAG_FP_ISINF -> FunctionDeclarationKind.FP_IS_INF;
+      case MSAT_TAG_FP_ISZERO -> FunctionDeclarationKind.FP_IS_ZERO;
+      case MSAT_TAG_FP_ISNEG -> FunctionDeclarationKind.FP_IS_NEGATIVE;
+      case MSAT_TAG_FP_ISSUBNORMAL -> FunctionDeclarationKind.FP_IS_SUBNORMAL;
+      case MSAT_TAG_FP_ISNORMAL -> FunctionDeclarationKind.FP_IS_NORMAL;
+      case MSAT_TAG_FLOOR -> FunctionDeclarationKind.FLOOR;
+      default -> FunctionDeclarationKind.OTHER;
+    };
   }
 
   @Override
