@@ -69,7 +69,6 @@ import java.util.Map.Entry;
 import java.util.Optional;
 import java.util.Set;
 import java.util.TreeMap;
-import java.util.stream.Collectors;
 import org.checkerframework.checker.nullness.qual.Nullable;
 import org.sosy_lab.common.Appender;
 import org.sosy_lab.common.Appenders;
@@ -329,14 +328,13 @@ class PrincessEnvironment {
       declaredFunctions.addAll(creator.extractVariablesAndUFs(f, true).values());
     }
     for (IExpression var : declaredFunctions.build()) {
-      if (var instanceof IConstant) {
-        sortedVariablesCache.put(((IConstant) var).c().name(), (ITerm) var);
-        addSymbol((IConstant) var);
-      } else if (var instanceof IAtom) {
-        boolVariablesCache.put(((IAtom) var).pred().name(), (IFormula) var);
-        addSymbol((IAtom) var);
-      } else if (var instanceof IFunApp) {
-        IFunApp app = (IFunApp) var;
+      if (var instanceof IConstant iConstant) {
+        sortedVariablesCache.put(iConstant.c().name(), iConstant);
+        addSymbol(iConstant);
+      } else if (var instanceof IAtom iAtom) {
+        boolVariablesCache.put(iAtom.pred().name(), iAtom);
+        addSymbol(iAtom);
+      } else if (var instanceof IFunApp app) {
         IFunction fun = app.fun();
         functionsCache.put(fun.name(), new PrincessIFunctionDeclaration(app));
         addFunction(fun);
@@ -432,10 +430,10 @@ class PrincessEnvironment {
         // declare normal symbols
         for (Entry<String, IExpression> symbol : symbols.entrySet()) {
           out.append(
-              String.format(
-                  "(declare-fun %s () %s)%n",
-                  SMTLineariser.quoteIdentifier(symbol.getKey()),
-                  getFormulaType(symbol.getValue()).toSMTLIBString()));
+              "(declare-fun %s () %s)%n"
+                  .formatted(
+                      SMTLineariser.quoteIdentifier(symbol.getKey()),
+                      getFormulaType(symbol.getValue()).toSMTLIBString()));
         }
 
         // declare UFs
@@ -444,11 +442,11 @@ class PrincessEnvironment {
               Lists.transform(
                   asJava(function.getValue().args()), a -> getFormulaType(a).toSMTLIBString());
           out.append(
-              String.format(
-                  "(declare-fun %s (%s) %s)%n",
-                  SMTLineariser.quoteIdentifier(function.getKey()),
-                  Joiner.on(" ").join(argSorts),
-                  getFormulaType(function.getValue()).toSMTLIBString()));
+              "(declare-fun %s (%s) %s)%n"
+                  .formatted(
+                      SMTLineariser.quoteIdentifier(function.getKey()),
+                      Joiner.on(" ").join(argSorts),
+                      getFormulaType(function.getValue()).toSMTLIBString()));
         }
 
         // now every symbol from the formula or from abbreviations are declared,
@@ -457,11 +455,11 @@ class PrincessEnvironment {
           IExpression abbrevFormula = usedAbbrevs.get(abbrev);
           IExpression fullFormula = abbrevMap.get(abbrevFormula);
           out.append(
-              String.format(
-                  "(define-fun %s () %s %s)%n",
-                  SMTLineariser.quoteIdentifier(abbrev),
-                  getFormulaType(fullFormula).toSMTLIBString(),
-                  SMTLineariser.asString(fullFormula)));
+              "(define-fun %s () %s %s)%n"
+                  .formatted(
+                      SMTLineariser.quoteIdentifier(abbrev),
+                      getFormulaType(fullFormula).toSMTLIBString(),
+                      SMTLineariser.asString(fullFormula)));
         }
 
         // now add the final assert
@@ -500,9 +498,9 @@ class PrincessEnvironment {
             Set<IExpression> varsFromAbbrev = getVariablesFromAbbreviation(var);
             Sets.difference(varsFromAbbrev, allVars).forEach(waitlistSymbols::push);
             allVars.addAll(varsFromAbbrev);
-          } else if (var instanceof IFunApp) {
+          } else if (var instanceof IFunApp iFunApp) {
             Preconditions.checkState(!ufs.containsKey(name));
-            ufs.put(name, (IFunApp) var);
+            ufs.put(name, iFunApp);
           } else {
             Preconditions.checkState(!symbols.containsKey(name));
             symbols.put(name, var);
@@ -553,15 +551,15 @@ class PrincessEnvironment {
   }
 
   private static String getName(IExpression var) {
-    if (var instanceof IAtom) {
-      return ((IAtom) var).pred().name();
+    if (var instanceof IAtom iAtom) {
+      return iAtom.pred().name();
     } else if (var instanceof IConstant) {
       return var.toString();
-    } else if (var instanceof IFunApp) {
-      String fullStr = ((IFunApp) var).fun().toString();
+    } else if (var instanceof IFunApp iFunApp) {
+      String fullStr = iFunApp.fun().toString();
       return fullStr.substring(0, fullStr.indexOf('/'));
-    } else if (var instanceof IIntFormula) {
-      return getName(((IIntFormula) var).t());
+    } else if (var instanceof IIntFormula iIntFormula) {
+      return getName(iIntFormula.t());
     }
 
     throw new IllegalArgumentException("The given parameter is no variable or function");
@@ -570,14 +568,14 @@ class PrincessEnvironment {
   static FormulaType<?> getFormulaType(IExpression pFormula) {
     if (pFormula instanceof IFormula) {
       return FormulaType.BooleanType;
-    } else if (pFormula instanceof IFunApp
-        && ((IFunApp) pFormula).fun().equals(ModuloArithmetic.bv_extract())) {
+    } else if (pFormula instanceof IFunApp pApp
+        && pApp.fun().equals(ModuloArithmetic.bv_extract())) {
       IIntLit upper = (IIntLit) pFormula.apply(0);
       IIntLit lower = (IIntLit) pFormula.apply(1);
       IdealInt bwResult = upper.value().$minus(lower.value());
       return FormulaType.getBitvectorTypeWithSize(bwResult.intValue());
-    } else if (pFormula instanceof IFunApp
-        && ((IFunApp) pFormula).fun().equals(ModuloArithmetic.bv_concat())) {
+    } else if (pFormula instanceof IFunApp pApp
+        && pApp.fun().equals(ModuloArithmetic.bv_concat())) {
       IIntLit upper = (IIntLit) pFormula.apply(0);
       IIntLit lower = (IIntLit) pFormula.apply(1);
       IdealInt bwResult = upper.value().$plus(lower.value());
@@ -589,9 +587,8 @@ class PrincessEnvironment {
       } catch (IllegalArgumentException e) {
         // add more info about the formula, then rethrow
         throw new IllegalArgumentException(
-            String.format(
-                "Unknown formula type '%s' of sort '%s' for formula '%s'.",
-                pFormula.getClass(), sort.toString(), pFormula),
+            "Unknown formula type '%s' of sort '%s' for formula '%s'."
+                .formatted(pFormula.getClass(), sort.toString(), pFormula),
             e);
       }
     }
@@ -610,9 +607,9 @@ class PrincessEnvironment {
       return FormulaType.StringType;
     } else if (sort == PrincessEnvironment.REGEX_SORT) {
       return FormulaType.RegexType;
-    } else if (sort instanceof ArraySort) {
-      Seq<Sort> indexSorts = ((ArraySort) sort).theory().indexSorts();
-      Sort elementSort = ((ArraySort) sort).theory().objSort();
+    } else if (sort instanceof ArraySort arraySort) {
+      Seq<Sort> indexSorts = arraySort.theory().indexSorts();
+      Sort elementSort = arraySort.theory().objSort();
       assert indexSorts.iterator().size() == 1 : "unexpected index type in Array type:" + sort;
       // assert indexSorts.size() == 1; // TODO Eclipse does not like simpler code.
       return FormulaType.getArrayType(
@@ -628,7 +625,7 @@ class PrincessEnvironment {
       } else {
         // Otherwise, fail
         throw new IllegalArgumentException(
-            String.format("Unknown formula type '%s' for sort '%s'.", sort.getClass(), sort));
+            "Unknown formula type '%s' for sort '%s'.".formatted(sort.getClass(), sort));
       }
     }
   }
@@ -733,8 +730,7 @@ class PrincessEnvironment {
   }
 
   public boolean hasArrayType(IExpression exp) {
-    if (exp instanceof ITerm) {
-      final ITerm t = (ITerm) exp;
+    if (exp instanceof ITerm t) {
       return Sort$.MODULE$.sortOf(t) instanceof ArraySort;
     } else {
       return false;
@@ -768,8 +764,7 @@ class PrincessEnvironment {
   }
 
   static Seq<ITerm> toITermSeq(List<IExpression> exprs) {
-    return PrincessEnvironment.toSeq(
-        exprs.stream().map(e -> (ITerm) e).collect(Collectors.toList()));
+    return PrincessEnvironment.toSeq(exprs.stream().map(e -> (ITerm) e).toList());
   }
 
   static Seq<ITerm> toITermSeq(IExpression... exprs) {
